# IronRDP

crates/ironrdp-replay-player/: Cargo.toml
crates/ironrdp-replay-player/src/: error.rs  lib.rs
web-client/iron-replay-player/: package-lock.json  package.json  vite.config.ts
web-client/iron-replay-player/src/lib/: FolderUploader.svelte  ReplayPlayer.svelte  index.ts  pdu-store.ts
web-client/iron-replay-player/src/routes/: +layout.svelte  +page.svelte
web-client/iron-replay-player/src/routes/player/: +page.svelte
